syntax = "proto3";

package o5.registry.github.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/pentops/registry/internal/gen/o5/registry/github/v1/github_pb";

message CheckRun {
  string owner = 1;
  string repo = 2;

  string check_name = 3;
  int64 check_id = 4;
}
